[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/gui/Welcome.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font.ttf"

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/font.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = SubResource( 5 )

[node name="Welcome" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.8 )

[node name="Data" type="MarginContainer" parent="BG"]
anchor_top = 0.211574
anchor_right = 1.0
anchor_bottom = 0.788426
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Values" type="VBoxContainer" parent="BG/Data"]
margin_right = 1920.0
margin_bottom = 623.0

[node name="Name" type="Label" parent="BG/Data/Values"]
margin_right = 1920.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "Ultimate Planet Habitat Support Tester 2020!!"
align = 1

[node name="LD46" type="Label" parent="BG/Data/Values"]
margin_top = 65.0
margin_right = 1920.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "Made for LudumDare46 Compo in 48 hours."
align = 1
autowrap = true

[node name="HowTo" type="Label" parent="BG/Data/Values"]
margin_top = 86.0
margin_right = 1920.0
margin_bottom = 503.0
custom_fonts/font = SubResource( 6 )
text = "Hello there young apprentice!
Today your skills as a Planet custodian will be teseted!
You have (almost) all the tools needed to have this planet survive as long as the cosmos will exist!
Remember not to run out of the planets energy and dont let all the creatures die!
Energy is restored to the planet from dead creatures.
Plants consume the energy of the planet to live.
Animals eat plants and eachother.
If you dont like a certain species you can eliminate them or change its behaviour, but remember, everything comes at a cost!

Controls:
Most things are done by clicking the left mouse button.
You can zoom with the scrool wheel od +/- on your keyboard.
To move around press the right mouse button and move the mouse or use WASD/Arrow keys.

Have fun :)!"
align = 1

[node name="Tiny" type="Button" parent="BG/Data/Values"]
margin_top = 507.0
margin_right = 1920.0
margin_bottom = 527.0
text = "Start on a Tiny Planet"

[node name="Small" type="Button" parent="BG/Data/Values"]
margin_top = 531.0
margin_right = 1920.0
margin_bottom = 551.0
text = "Start on a Small Planet"

[node name="Medium" type="Button" parent="BG/Data/Values"]
margin_top = 555.0
margin_right = 1920.0
margin_bottom = 575.0
text = "Start on a Medium Planet"

[node name="Large" type="Button" parent="BG/Data/Values"]
margin_top = 579.0
margin_right = 1920.0
margin_bottom = 599.0
text = "Start on a Large Planet (can be heavy on your pc)"

[node name="Quit" type="Button" parent="BG/Data/Values"]
margin_top = 603.0
margin_right = 1920.0
margin_bottom = 623.0
text = "Quit"
[connection signal="pressed" from="BG/Data/Values/Tiny" to="." method="_on_Tiny_pressed"]
[connection signal="pressed" from="BG/Data/Values/Small" to="." method="_on_Small_pressed"]
[connection signal="pressed" from="BG/Data/Values/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="BG/Data/Values/Large" to="." method="_on_Large_pressed"]
[connection signal="pressed" from="BG/Data/Values/Quit" to="." method="_on_Quit_pressed"]
